// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom actions sets default action if not given 1`] = `
[
  {
    "alias": "org",
    "changeset": {
      "name": {
        "fieldsetAccess": [
          "name",
        ],
        "kind": "fieldset-input",
        "required": false,
        "type": "text",
      },
    },
    "kind": "update-one",
    "model": "Org",
    "response": [],
  },
]
`;

exports[`custom actions succeeds for basic composite create 1`] = `
[
  {
    "alias": "e",
    "changeset": {},
    "kind": "create-one",
    "model": "OrgExtra",
    "response": [],
  },
  {
    "alias": "org",
    "changeset": {
      "extras_id": {
        "kind": "reference-value",
        "target": {
          "access": [
            "id",
          ],
          "alias": "e",
        },
        "type": "integer",
      },
      "is_new": {
        "kind": "value",
        "type": "boolean",
        "value": true,
      },
      "name": {
        "fieldsetAccess": [
          "name",
        ],
        "kind": "fieldset-input",
        "required": true,
        "type": "text",
      },
    },
    "kind": "create-one",
    "model": "Org",
    "response": [],
  },
]
`;

exports[`custom actions succeeds for basic update 1`] = `
[
  {
    "alias": "ox",
    "changeset": {
      "description": {
        "fieldsetAccess": [
          "description",
        ],
        "kind": "fieldset-input",
        "required": false,
        "type": "text",
      },
      "extras_id": {
        "fieldsetAccess": [
          "extras_id",
        ],
        "kind": "fieldset-input",
        "required": false,
        "type": "integer",
      },
      "name": {
        "kind": "value",
        "type": "text",
        "value": "new name",
      },
    },
    "kind": "update-one",
    "model": "Org",
    "response": [],
  },
]
`;

exports[`custom actions succeeds with custom inputs 1`] = `
[
  {
    "alias": "ox",
    "changeset": {
      "description": {
        "fieldsetAccess": [
          "description",
        ],
        "kind": "fieldset-input",
        "required": false,
        "type": "text",
      },
      "extras": {
        "fieldsetAccess": [
          "name",
        ],
        "kind": "fieldset-reference-input",
        "throughField": {
          "name": "name",
          "refKey": "OrgExtra.name",
        },
      },
      "name": {
        "kind": "value",
        "type": "text",
        "value": "new name",
      },
      "uuid": {
        "fieldsetAccess": [
          "uuid",
        ],
        "kind": "fieldset-input",
        "required": false,
        "type": "text",
      },
    },
    "kind": "update-one",
    "model": "Org",
    "response": [],
  },
]
`;
